--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <pre>
 1.Java
 2.SQL
+3. Python
 </pre>
 <h3>Declaration</h3>
 <p>I hereby declare that the information furnished above is true to the best of my knowledge.</p>
